# pyacl

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.cfg  test.sh
pyacl/: __init__.py  __version__.py  acl.py
scripts/: isort.sh  test.sh
tests/: conftest.py  matrix-apply-update.yaml  matrix-apply.yaml  matrix.yaml  test_pyacl.py
