[metadata]
name = pyacl
version = attr: pyacl.__version__
author = Georg Pfuetzenreuter
author_email = georg+python@lysergic.dev
description = High level abstractions over pylibacl
license = EUPL-1.2
long_description = file: README.md, LICENSE

[options]
package_dir=
    =.
packages=find:
python_requires = >=3.6

[options.packages.find]
exclude=
    scripts*
    tests*
    *.toml
where=.
